# poisson-aqtivate

./: CMakeLists.txt  README.md  array_helpers.c  array_helpers.h  log.c  log.h  main.c  mpi_solver.c  solver.c  test.c  test.h
test/: CMakeLists.txt
